objects/good__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>goods</relationshipLabel>
        <relationshipName>goods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>good</label>
    <nameField>
        <label>good Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>goods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>